--- a/about.html
+++ b/about.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rishi Kumar</title>
+    <title>About</title>
 </head>
 <body>
-    
-This Website Is For Test 
-
-<a href="/about">Click Me</a>
-
-
+    My Name Is Rishi ...
 </body>
 </html>
